Fix control spacing

--- a/packages/js/product-editor/src/components/variations-table/variation-stock-status-form/styles.scss
+++ b/packages/js/product-editor/src/components/variations-table/variation-stock-status-form/styles.scss
@@ -10,6 +10,18 @@
 		padding: $grid-unit-20;
 	}
 
+	&__controls {
+		&:first-child {
+			padding-top: $grid-unit-20;
+		}
+
+		padding-top: 0;
+
+		.components-base-control.components-toggle-control {
+			margin: 0;
+		}
+	}
+
 	&__actions {
 		justify-content: flex-end;
 	}
